Deleted unused endpoint (#1680)
* Deleted unused endpoint

* Remove tests for unused methods from UBSManagementServiceImplTest class

* Remove unused methods from UBSManagementService interface and its implementation

* Remove unused methods from ModelUtils class

* Remove unused DTO (AdminCommentDto) from service-api

---------

Co-authored-by: olehio-p <oleh.popovych.shi.2023@lpnu.ua>